--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav class="navbar">
         <ul class="nav-links">
           <li class="nav-item"><label for="username">user name:</label><input id="username"></li>
-          <li class="nav-item"><label for="password">password:</label><input id="password"></li>
+          <li class="nav-item"><label for="password">password:</label><input type="password" id="password"></li>
           <li class="nav-item"><button onclick="getToken()">login</button></li>
         </ul>
       </nav>
