--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <button onclick="getToken()">Submit</button>
     </form>
   </div>
+  <div id="logout" class="hidden">
+    <button onclick="logout()" class="logout-btn">Sortir</button>
+  </div>
   <div class="wrapper" id="wrapper">      
   </div>
   <script src="jwt-vanilla.js"></script>
