--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <input placeholder="Username" type="text" required="" id="username">
       <input placeholder="Password" type="password" required="" id="password">
       <input placeholder="Plateforme BOM" type="text" required="" id="platform">
-      <button onclick="getToken()">Submit</button>
+      <button onclick="login()">Submit</button>
     </form>
   </div>
   <div id="logout" class="hidden">
