add error css class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="login">
     <form action="javascript:void(0);">
       <h1>MUR D'HUMEUR POUR BOM</h1>
-      <div id="error"></div>
+      <div id="error" class="error"></div>
       <input placeholder="Username" type="text" required="" id="username">
       <input placeholder="Password" type="password" required="" id="password">
       <input placeholder="Plateforme BOM" type="text" required="" id="platform">
